# qore-cpp

./: CMakeLists.txt  motion_config.json
include/: MotionConfigManager.h  MotionTypes.h  acs_controller.h  logger.h
src/: MotionConfigManager.cpp  acs_controller.cpp  logger.cpp  main.cpp
